[gd_scene load_steps=7 format=3 uid="uid://cy5w6a0g6bj63"]

[ext_resource type="Script" path="res://levels/door_to_level_3.gd" id="1_681kb"]
[ext_resource type="Texture2D" uid="uid://ddd1hs5xalisq" path="res://levels/doorSlidingSprite.png" id="2_sdb1d"]

[sub_resource type="Animation" id="Animation_1e8u1"]
resource_name = "Closing"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333, 0.366667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 7, 6, 5, 4, 3, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_5h3mf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5ykhi"]
resource_name = "opening"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jc3b6"]
_data = {
"Closing": SubResource("Animation_1e8u1"),
"RESET": SubResource("Animation_5h3mf"),
"opening": SubResource("Animation_5ykhi")
}

[node name="DoorToLevel3" type="Area2D"]
script = ExtResource("1_681kb")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, -1)
scale = Vector2(0.13, 0.13)
texture = ExtResource("2_sdb1d")
hframes = 9

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(0.13, 0.13)
polygon = PackedVector2Array(184.615, 230.769, -184.615, 230.769, -184.615, -184.615, -161.538, -238.461, 169.23, -238.461, 184.615, -184.615)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jc3b6")
}

[node name="Timer" type="Timer" parent="."]
process_callback = 0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
